<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Common Cents "</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="activity_login">Login</string>
    <string name="activity_main">Main</string>
    <string name="enter_login">Enter Login Information</string>
    <string name="enter_id">UserID</string>
    <string name="enter_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="success">Success!</string>
    <string name="activity_register">Register</string>
    <string name="register_username">Enter username</string>
    <string name="register_password">Enter password</string>
    <string name="valid_password">Password must be at least 8 characters long and include letters and numbers</string>
    <string name="register_email">Enter email</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="add_account">Add an Account</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name="account_name">Account Name</string>
    <string name="display_name">Display Name</string>
    <string name="account_owner">Account Owner</string>
    <string name="starting_balance">Starting Balance</string>
    <string name="interest">Interest</string>
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>
    <string name="title_activity_account">Your Account</string>
    <string name="transaction">Make Transaction</string>
    <string name="amount">Amount</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Depositw</string>
    <string name="title_activity_transaction">Make a Transaction</string>
    <string name="hello_world">Hello world!</string>

</resources>
