<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddAccountActivity"
    android:orientation="vertical"
    android:gravity="center" >

    <EditText 
        android:id="@+id/accountName"
        android:hint="@string/account_name"
   		android:inputType="text"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <EditText 
        android:id="@+id/displayName"
        android:hint="@string/display_name"
   		android:inputType="text"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <EditText 
        android:id="@+id/accountOwner"
        android:hint="@string/account_owner"
   		android:inputType="text"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <EditText 
        android:id="@+id/startingBalance"
        android:hint="@string/starting_balance"
   		android:inputType="numberDecimal"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <EditText 
        android:id="@+id/interest"
        android:hint="@string/interest"
   		android:inputType="numberDecimal"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <Button 
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_button"
        android:onClick="accept" />
    
    <Button 
        android:id="@+id/declineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline_button"
        android:onClick="decline" />

</LinearLayout>
