<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#C0C0C0"
    tools:context=".RegisterActivity" >
    
    <TextView
        android:text="@string/activity_register"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    
    <EditText 
        android:id="@+id/registerUsername"
        android:hint="@string/register_username"
   		android:inputType="text"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <EditText 
        android:id="@+id/registerPassword"
        android:hint="@string/register_password"
   		android:inputType="text"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <TextView
        android:text="@string/valid_password"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <EditText 
        android:id="@+id/registerEmail"
        android:hint="@string/register_email"
   		android:inputType="textEmailAddress"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <Button 
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:onClick="registerAccount" />


</LinearLayout>
