<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" 
    android:orientation="vertical"
    android:gravity="center"
    android:background="#C0C0C0" >

    <TextView
        android:text="@string/enter_login"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    
    <EditText 
        android:id="@+id/loginText"
        android:hint="@string/enter_id"
   		android:inputType="text"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <EditText 
        android:id="@+id/passwordText"
        android:hint="@string/enter_password"
   		android:inputType="textPassword"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="8dp" />
    
    <Button 
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:onClick="goToMain" />

</LinearLayout>
